# Galen

./: LICENSE  README.md  USAGE.md  claw.ps1  codex-plan.md
rust/: Cargo.toml
rust/crates/api/src/providers/: openai_compat.rs
rust/crates/claw-gui/: Cargo.toml
rust/crates/claw-gui/src/: app.rs  backend.rs  main.rs
rust/crates/medical-core/: Cargo.toml
rust/crates/medical-core/src/: citations.rs  lib.rs  prompts.rs  pubmed.rs  types.rs
rust/crates/model-router/: Cargo.toml
rust/crates/model-router/src/: config.rs  discovery.rs  lib.rs
rust/crates/plugins/src/: hooks.rs
rust/crates/runtime/src/: hooks.rs  mcp_stdio.rs  mcp_tool_bridge.rs
rust/crates/rusty-claude-cli/src/: main.rs
rust/crates/rusty-claude-cli/tests/: compact_output.rs  mock_parity_harness.rs
rust/crates/vibe-paper/: index.html  package-lock.json  package.json
rust/crates/vibe-paper/src/: App.css  App.tsx  types.ts
rust/crates/vibe-paper/src-tauri/: Cargo.toml  tauri.conf.json
rust/crates/vibe-paper/src-tauri/capabilities/: default.json
rust/crates/vibe-paper/src-tauri/src/: backend.rs  lib.rs  main.rs  workspace.rs
rust/crates/vibe-paper/src/components/: ChatPanel.tsx  PaperPanel.tsx  StatusBar.tsx  TabBar.tsx
rust/crates/vibe-paper/src/hooks/: useChat.ts
scripts/windows/: Install-ClawCode.ps1  Install-ClawCodeShortcut.ps1  Start-ClawCode.ps1
