[package]
name = "claw-gui"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Claw-MD GUI — medical AI research desktop (egui + eframe)"

[[bin]]
name = "claw-gui"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
egui = "0.31"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
api = { path = "../api" }
model-router = { path = "../model-router" }
medical-core = { path = "../medical-core" }
