[package]
name = "medical-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Medical literature tools: PubMed, MeSH, citations, and prompt templates"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt", "macros"] }
roxmltree = "0.20"
model-router = { path = "../model-router" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
