[package]
name = "model-router"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Model router with TOML config for multi-provider LLM routing"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
